Remove document.write

--- a/web-src/examples/bar-single-select.html
+++ b/web-src/examples/bar-single-select.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <p>Frequently asked question: how to enable single-select on an ordinal chart?</p>
 
