--- a/web-src/examples/boxplot-render-data.html
+++ b/web-src/examples/boxplot-render-data.html
@@ -10,7 +10,8 @@
 <body>
 
 <div class="container" >
-    <script type="text/javascript" src="header.js"></script>
+    <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
     <div class='row'>
         <div class="col-md-4" id='boxPlot01' style="text-align: center;">
             <h6>dataOpacity = 1<br/>dataWidthPortion = 0.9</h6>
