--- a/web-src/examples/complex-reduce.html
+++ b/web-src/examples/complex-reduce.html
@@ -20,6 +20,7 @@
 
 <div class="container">
 
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
   <p>Frequently asked question: how to show the minimum/maximum of some value in the rows?</p>
 
