--- a/web-src/examples/composite-brush-multi-dim.html
+++ b/web-src/examples/composite-brush-multi-dim.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
   <p>Usually sub charts of a composite chart share the dimension of the parent.
