--- a/web-src/examples/filter-stacks.html
+++ b/web-src/examples/filter-stacks.html
@@ -18,6 +18,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
   <div id="test">
     <div class="reset" style="visibility: hidden;">selected: <span class="filter"></span>
