--- a/web-src/examples/filtering-removing.html
+++ b/web-src/examples/filtering-removing.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
   <p>Example demonstrating using a "<a href="https://github.com/dc-js/dc.js/wiki/FAQ#fake-groups">Fake Group</a>" to remove
     the empty bars of an ordinal bar chart when their values drop to zero.</p>
