--- a/web-src/examples/focus-dynamic-interval.html
+++ b/web-src/examples/focus-dynamic-interval.html
@@ -9,7 +9,8 @@
 <body>
 
 <div class="container">
-    <script type="text/javascript" src="header.js"></script>
+    <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
 
     <p>Zoom test</p>
     <div id="chart"></div>
