--- a/web-src/examples/heat.html
+++ b/web-src/examples/heat.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
 <h2>Michelson–Morley experiment</h2>
