--- a/web-src/examples/number.html
+++ b/web-src/examples/number.html
@@ -21,6 +21,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <div id="test" style="float: none">
   Inline Number Display. We have <span class="number-display"></span> jumping on the bed.
