--- a/web-src/examples/replacing-data.html
+++ b/web-src/examples/replacing-data.html
@@ -10,6 +10,7 @@
 <body>
 <link rel="stylesheet" type="text/css" href="../css/dc.css"/>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <script type="text/javascript" src="../js/d3.js"></script>
 <script type="text/javascript" src="../js/crossfilter.js"></script>
