--- a/web-src/examples/scatter-canvas-large.html
+++ b/web-src/examples/scatter-canvas-large.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <h3>dc.js - Scatter Plot Brushing Example - Large Dataset, Canvas Backend</h3>
 <p>Plotting 20,000 data points in 2 plots. Plots may take several seconds to load. Brush on one chart to see the points filtered on the other. Compare against performance using SVG backend in the <a href="scatter-svg-large.html">SVG large dataset scatter plot example</a>.</p>
