--- a/web-src/examples/select.html
+++ b/web-src/examples/select.html
@@ -10,6 +10,7 @@ let i; <!DOCTYPE html>
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
   <p>A meaningless example of multiple selectMenus on some random data...</p>
   <div id="select1">
