--- a/web-src/examples/sunburst-cat.html
+++ b/web-src/examples/sunburst-cat.html
@@ -19,6 +19,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
 <div id="file_chart"></div>
