--- a/web-src/examples/sunburst-with-value-accessor.html
+++ b/web-src/examples/sunburst-with-value-accessor.html
@@ -19,7 +19,8 @@
 <body>
 
 <div class="container">
-    <script type="text/javascript" src="header.js"></script>
+    <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
 
     <p>
         This example uses <a href="https://github.com/crossfilter/reductio">Reductio</a> to reduce groups.
