--- a/web-src/examples/text-filter-widget.html
+++ b/web-src/examples/text-filter-widget.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
 <div id="search"></div>
