--- a/web-src/examples/time-intervals.html
+++ b/web-src/examples/time-intervals.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
 <p>This demonstrates using an <a href="https://en.wikipedia.org/wiki/Interval_tree">interval
