--- a/web-src/examples/boxplot-basic.html
+++ b/web-src/examples/boxplot-basic.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <div id="box-test"></div>
 <div id="pie-chart"></div>
