--- a/web-src/examples/boxplot-enhanced.html
+++ b/web-src/examples/boxplot-enhanced.html
@@ -10,7 +10,8 @@
 <body>
 
 <div class="container" >
-    <script type="text/javascript" src="header.js"></script>
+    <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
     <div class='row'>
         <div class="col-md-2" id='pie01' style="margin-left: 20%; text-align: center;">
             <h5><strong>Club</strong></h5>
