--- a/web-src/examples/brush-ordinal.html
+++ b/web-src/examples/brush-ordinal.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <p>This example demonstrates brushing on an ordinal bar chart, by mapping the values to
 integers and specifying a linear scale. The data is sorted by descending value in one
