--- a/web-src/examples/cbox-menu.html
+++ b/web-src/examples/cbox-menu.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
   <p>A meaningless example of multiple cboxMenus on some random data...</p>
   <div id="cbox1">
