--- a/web-src/examples/color-swatch.html
+++ b/web-src/examples/color-swatch.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
 <p style="clear:left">Example of creating a simple external chart and attaching it to the dc.js
