--- a/web-src/examples/compare-unfiltered.html
+++ b/web-src/examples/compare-unfiltered.html
@@ -24,7 +24,8 @@
 <body>
 
 <div class="container">
-  <script type="text/javascript" src="header.js"></script>
+  <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
   <script type="text/javascript" src="../js/d3.js"></script>
   <script type="text/javascript" src="../js/crossfilter.js"></script>
   <script type="text/javascript" src="../js/dc.js"></script>
