--- a/web-src/examples/download-table.html
+++ b/web-src/examples/download-table.html
@@ -15,6 +15,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
   <div id="chart-ring-year" style="width:300px; height:330px">
     <div class="reset" style="visibility: hidden;">selected: <span class="filter"></span>
