--- a/web-src/examples/focus-dynamic-data.html
+++ b/web-src/examples/focus-dynamic-data.html
@@ -9,7 +9,8 @@
   <body>
 
     <div class="container">
-      <script type="text/javascript" src="header.js"></script>
+      <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
       <p>This example shows how to display dynamically changing data with a range/focus chart
         pair. In particular, the focus chart should display the changing X domain unless a brush is
         active in the range chart.</p>
