--- a/web-src/examples/focus-ordinal-bar.html
+++ b/web-src/examples/focus-ordinal-bar.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <p>This example demonstrates using range and focus charts to scroll an ordinal bar chart
   with too many items.</p>
