--- a/web-src/examples/heatmap-filtering.html
+++ b/web-src/examples/heatmap-filtering.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
 <h2>Nasdaq 100 Percentage Gain by Month of Year</h2>
