--- a/web-src/examples/horizon-chart.html
+++ b/web-src/examples/horizon-chart.html
@@ -13,7 +13,8 @@
 <body>
 
 <div class="container">
-  <script type="text/javascript" src="header.js"></script>
+  <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
 
 <div id="horizon"></div>
 <div id="series"></div>
