--- a/web-src/examples/html-legend.html
+++ b/web-src/examples/html-legend.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
 <p>This page demonstrates the usage of the html legend.
