--- a/web-src/examples/pareto-chart.html
+++ b/web-src/examples/pareto-chart.html
@@ -13,7 +13,8 @@
 <body>
 
 <div class="container">
-  <script type="text/javascript" src="header.js"></script>
+  <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
 
     <p>You can use <a href="https://github.com/dc-js/dc.js/wiki/FAQ#fake-groups">fake groups</a> and a composite chart to implement a dynamic <a href="https://en.wikipedia.org/wiki/Pareto_chart">Pareto chart</a> in dc.js.</p>
 
