--- a/web-src/examples/range-series.html
+++ b/web-src/examples/range-series.html
@@ -9,7 +9,8 @@
 <body>
 
 <div class="container">
-  <script type="text/javascript" src="header.js"></script>
+  <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
 
   <p>This page demonstrates a line chart used as a rangeChart after <a href="https://github.com/dc-js/dc.js/issues/479">#479</a>
       is fixed by <a href="https://github.com/dc-js/dc.js/pull/1408">#1408</a>.</p>
