--- a/web-src/examples/regression.html
+++ b/web-src/examples/regression.html
@@ -17,6 +17,7 @@
 
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <p>This example demonstrates using <a href="https://github.com/Tom-Alexander/regression-js">regression.js</a>
   to calculate a linear regression on the points in a scatter plot.</p>
