--- a/web-src/examples/right-axis.html
+++ b/web-src/examples/right-axis.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <div>
     <strong>Monthly Index Abs Move &amp; Volume Chart</strong>
