--- a/web-src/examples/row-top-axis.html
+++ b/web-src/examples/row-top-axis.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 <div id="test"></div>
 
