--- a/web-src/examples/scatter-brushing.html
+++ b/web-src/examples/scatter-brushing.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
   <p>Brush on one chart to see the points filtered on the other.</p>
