--- a/web-src/examples/scatter-canvas-brushing.html
+++ b/web-src/examples/scatter-canvas-brushing.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container">
+<div id="header"></div>
 <script type="text/javascript" src="header.js"></script>
 
   <p>Plotting 20,000 data points in 2 plots. Plots may take several seconds to load. Brush on one chart to see the points filtered on the other.</p>
