--- a/web-src/examples/stacked-bar.html
+++ b/web-src/examples/stacked-bar.html
@@ -14,7 +14,8 @@
 <body>
 
 <div class="container">
-    <script type="text/javascript" src="header.js"></script>
+    <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
     <div id="test"></div>
 
     <script type="text/javascript" src="../js/d3.js"></script>
