--- a/web-src/examples/switching-time-intervals.html
+++ b/web-src/examples/switching-time-intervals.html
@@ -14,7 +14,8 @@
   <body>
 
     <div class="container">
-      <script type="text/javascript" src="header.js"></script>
+      <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
 
       <p>This example demonstrates switching between different intervals of aggregation over time.</p>
       <select id="interval"></select>
