--- a/web-src/examples/table-pagination.html
+++ b/web-src/examples/table-pagination.html
@@ -9,7 +9,8 @@
 <body>
 
   <div class="container">
-    <script type="text/javascript" src="header.js"></script>
+    <div id="header"></div>
+<script type="text/javascript" src="header.js"></script>
 
     <div class="row">
       <div id="piechart"><h4>Expt:</h4>
