Remove document.write

--- a/web-src/examples/current-filters.html
+++ b/web-src/examples/current-filters.html
@@ -75,7 +75,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div id="header"></div>
+        <h3>dc.js - Current filters and saving filter states</h3>
+        <div class="row">
         <div id="filter-states-widget-wrapper">
           <strong>Saved Filter States</strong>
           <a href="javascript:saveFilterState();">save current</a>
@@ -199,7 +201,8 @@
       <div class="clearfix"></div>
     </div>
 
-    <script type="text/javascript" src="../js/d3.js"></script>
+    <script type="text/javascript" src="header.js"></script>
+<script type="text/javascript" src="../js/d3.js"></script>
     <script type="text/javascript" src="../js/crossfilter.js"></script>
     <script type="text/javascript" src="../js/dc.js"></script>
 
