--- a/web-src/examples/splom.html
+++ b/web-src/examples/splom.html
@@ -61,7 +61,8 @@
     </style>
   </head>
   <body>
-    <script type="text/javascript" src="../js/d3.js"></script>
+    <script type="text/javascript" src="header.js"></script>
+<script type="text/javascript" src="../js/d3.js"></script>
     <script type="text/javascript" src="../js/crossfilter.js"></script>
     <script type="text/javascript" src="../js/dc.js"></script>
     <div class="container">
