--- a/web-src/examples/cbox-menu.html
+++ b/web-src/examples/cbox-menu.html
@@ -6,6 +6,33 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/dc.css" />
     <link type="text/css" rel="stylesheet" href="../css/dc-floatleft.css" />
+    <style>
+      .dc-chart th {
+        text-align: left;
+      }
+      .dc-chart th,
+      .dc-chart td {
+        padding-left: 10px;
+      }
+      .dc-chart tr.dc-table-group td {
+        padding-top: 4px;
+        border-bottom: 1px solid black;
+      }
+      .dc-chart li {
+        width: 15rem;
+      }
+      .dc-cbox-group {
+        list-style-type: none;
+        margin-left: 0;
+      }
+      .dc-cbox-group label {
+        display: inline-block;
+      }
+      .dc-cbox-group input[type='checkbox'],
+      .dc-cbox-group input[type='radio'] {
+        margin: 0 5px 5px 5px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -15,7 +42,7 @@
         <div>
           <a
             class="reset"
-            href="javascript:cbox1.filterAll();dc.redrawAll();"
+            href="javascript:cbox1.filterAll();chartGroup.redrawAll();"
             style="visibility: hidden;"
             >reset</a
           >
@@ -25,7 +52,7 @@
         <div>
           <a
             class="reset"
-            href="javascript:cbox2.filterAll();dc.redrawAll();"
+            href="javascript:cbox2.filterAll();chartGroup.redrawAll();"
             style="visibility: hidden;"
             >reset</a
           >
@@ -35,7 +62,7 @@
         <div>
           <a
             class="reset"
-            href="javascript:cbox3.filterAll();dc.redrawAll();"
+            href="javascript:cbox3.filterAll();chartGroup.redrawAll();"
             style="visibility: hidden;"
             >reset</a
           >
@@ -49,39 +76,12 @@
       <script type="text/javascript" src="../js/crossfilter.js"></script>
       <script type="text/javascript" src="../js/dc.js"></script>
 
-      <style type="text/css">
-        .dc-chart th {
-          text-align: left;
-        }
-        .dc-chart th,
-        .dc-chart td {
-          padding-left: 10px;
-        }
-        .dc-chart tr.dc-table-group td {
-          padding-top: 4px;
-          border-bottom: 1px solid black;
-        }
-        .dc-chart li {
-          width: 15rem;
-        }
-        .dc-cbox-group {
-          list-style-type: none;
-          margin-left: 0;
-        }
-        .dc-cbox-group label {
-          display: inline-block;
-        }
-        .dc-cbox-group input[type='checkbox'],
-        .dc-cbox-group input[type='radio'] {
-          margin: 0 5px 5px 5px;
-        }
-      </style>
-
       <script type="text/javascript">
-        const cbox1 = new dc.CboxMenu('#cbox1'),
-          cbox2 = new dc.CboxMenu('#cbox2'),
-          cbox3 = new dc.CboxMenu('#cbox3'),
-          datatable = new dc.DataTable('#datatable');
+        const chartGroup = new dc.ChartGroup();
+        const cbox1 = new dc.CboxMenu('#cbox1', chartGroup),
+          cbox2 = new dc.CboxMenu('#cbox2', chartGroup),
+          cbox3 = new dc.CboxMenu('#cbox3', chartGroup),
+          datatable = new dc.DataTable('#datatable', chartGroup);
 
         // create a bunch of crosslinked categorical data
 
@@ -139,29 +139,53 @@
           letterDimension2 = ndx.dimension(d => d.letter);
 
         cbox1
-          .dimension(letterDimension)
-          .group(letterDimension.group())
-          .controlsUseVisibility(true);
+          .dataProvider(
+            new dc.CFSimpleAdapter({
+              dimension: letterDimension,
+              group: letterDimension.group(),
+            })
+          )
+          .configure({
+            controlsUseVisibility: true,
+          });
+
         cbox2
-          .dimension(colorDimension)
-          .group(colorDimension.group())
-          .multiple(true)
-          //    .numberVisible(10)
-          .controlsUseVisibility(true);
+          .dataProvider(
+            new dc.CFSimpleAdapter({
+              dimension: colorDimension,
+              group: colorDimension.group(),
+            })
+          )
+          .configure({
+            multiple: true,
+            controlsUseVisibility: true,
+          });
+
         cbox3
-          .dimension(stateDimension)
-          .group(stateDimension.group())
-          .multiple(true)
-          //    .numberVisible(10)
-          .controlsUseVisibility(true);
+          .dataProvider(
+            new dc.CFSimpleAdapter({
+              dimension: stateDimension,
+              group: stateDimension.group(),
+            })
+          )
+          .configure({
+            multiple: true,
+            controlsUseVisibility: true,
+          });
 
         datatable
-          .dimension(letterDimension2)
-          .section(d => d.letter)
-          .columns(['color', 'state'])
-          .size(data.length);
+          .dataProvider(
+            new dc.CFSimpleAdapter({
+              dimension: letterDimension2,
+            })
+          )
+          .configure({
+            section: d => d.letter,
+            columns: ['color', 'state'],
+            size: data.length,
+          });
 
-        dc.renderAll();
+        chartGroup.renderAll();
       </script>
     </div>
   </body>
