--- a/web-src/examples/composite.html
+++ b/web-src/examples/composite.html
@@ -16,7 +16,8 @@
       <script type="text/javascript" src="../js/crossfilter.js"></script>
       <script type="text/javascript" src="../js/dc.js"></script>
       <script type="text/javascript">
-        const composite = new dc.CompositeChart('#test_composed');
+        const chartGroup = new dc.ChartGroup();
+        const composite = new dc.CompositeChart('#test_composed', chartGroup);
 
         Promise.all([d3.csv('morley.csv'), d3.csv('morley2.csv')]).then(
           results => {
@@ -39,30 +40,52 @@
               }))
             );
 
-            const dim = ndx.dimension(dc.pluck('x')),
-              grp1 = dim.group().reduceSum(dc.pluck('y1')),
-              grp2 = dim.group().reduceSum(dc.pluck('y2'));
+            const dim = ndx.dimension(d => d.x),
+              grp1 = dim.group().reduceSum(d => d.y1),
+              grp2 = dim.group().reduceSum(d => d.y2);
 
             composite
+              .configure({
+                renderHorizontalGridLines: true,
+              })
               .width(768)
               .height(480)
               .x(d3.scaleLinear().domain([0, 20]))
               .yAxisLabel('The Y Axis')
-              .legend(dc.legend().x(80).y(20).itemHeight(13).gap(5))
-              .renderHorizontalGridLines(true)
+              .legend(new dc.Legend().x(80).y(20).itemHeight(13).gap(5))
               .compose([
-                new dc.LineChart(composite)
-                  .dimension(dim)
-                  .colors('red')
-                  .group(grp1, 'Top Line')
+                new dc.LineChart(composite, chartGroup)
+                  .dataProvider(
+                    new dc.CFMultiAdapter({
+                      dimension: dim,
+                      layers: [
+                        {
+                          group: grp1,
+                          name: 'Top Line',
+                        },
+                      ],
+                    })
+                  )
+                  .configure({
+                    brushOn: false,
+                  })
+                  .colorScale(() => 'red')
                   .dashStyle([2, 2]),
-                new dc.LineChart(composite)
-                  .dimension(dim)
-                  .colors('blue')
-                  .group(grp2, 'Bottom Line')
+                new dc.LineChart(composite, chartGroup)
+                  .dataProvider(
+                    new dc.CFMultiAdapter({
+                      dimension: dim,
+                      layers: [
+                        {
+                          group: grp2,
+                          name: 'Bottom Line',
+                        },
+                      ],
+                    })
+                  )
+                  .colorScale(() => 'blue')
                   .dashStyle([5, 5]),
               ])
-              .brushOn(false)
               .render();
           }
         );
